k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pnkln-orchestrator
  namespace: pnkln-production
  labels:
    app: pnkln
    component: orchestrator
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "pnkln-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: pnkln
    component: orchestrator
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  sessionAffinity: None
